--- a/.github/workflows/dev-stg-release.yml
+++ b/.github/workflows/dev-stg-release.yml
@@ -49,6 +49,7 @@ jobs:
               with:
                 scan-type: 'rootfs'
                 scan-ref: '.'
+                skip-dirs: 'gradle/'
                 format: 'table'
                 timeout: '10m0s'
                 exit-code: '1'
